authenticated-proxy-server/rootoverlay/etc/iptables/ip6tables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#This allows connections that match other rules to automaticly allow two way communications
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# always allow the loopback
-A OUTPUT -o lo -j ACCEPT
-A INPUT -i lo -j ACCEPT

# Inputs
# SSH
-A INPUT -m multiport -p tcp --dports 22 -j ACCEPT
# Proxy Server(tiny proxy)
-A INPUT -m multiport -p tcp --dports %PORT%,%TLS_PORT% -j ACCEPT

# Outputs
# DNS
-A OUTPUT -m multiport -p udp --dports 53 -j ACCEPT
# NTP
-A OUTPUT -m multiport -p udp --dports 123 -j ACCEPT
# HTTP/HTTPS
-A OUTPUT -m multiport -p tcp --dports 80,443 -j ACCEPT 

COMMIT # Added back by script after rules
